2006-12-23  Roger Leigh  <rleigh@debian.org>

	* Version 1.0.4.

	* debian/changelog: Finalise for 1.0.4.

2006-12-23  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #401180.

2006-12-23  Roger Leigh  <rleigh@debian.org>

	* Merge from trunk.

	* schroot/schroot-listmounts-main.cc
	(list_mounts): Use realpath(3) to ensure the correct mountpoint it
	checked.  This prevents severe dataloss if the user has placed a
	symbolic link in the SCHROOT_MOUNT_DIR path.

	* NEWS: Document realpath fix.

2006-11-03  Roger Leigh  <rleigh@debian.org>

	* debian/schroot.init: Add LSB init info and use LSB init
	functions.  Backported from trunk.

	* debian/changelog: Update.

2006-10-21  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.0.4.

	* NEWS: Bump version to 1.0.4.

	* configure.ac: Bump version to 1.0.4.

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Fix a number of minor typos.  Thanks to
	Jens Seidel.

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-setup.5.in: Fix typo (merged from mainline).

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* README, schroot/schroot-setup.5.in, schroot/schroot.conf.5.in:
	Fix a number of minor typos.  Thanks to Jens Seidel.

	* dchroot/dchroot-main-base.cc: Add translator comment.

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* po/de.po: Update German translation.  Thanks to Jens Seidel.

2006-10-14  Roger Leigh  <rleigh@debian.org>

	* Version 1.0.3.

2006-10-14  Roger Leigh  <rleigh@debian.org>

	* po/de.po: Updated German translation.  Thanks to Helge
	Kreutzmann.

2006-10-05  Luk Claes  <luk@debian.org>

	* po/vi.po: Updated Vietnamese translation.
	* po/cs.po: Updated Czech translation.

2006-10-04  Luk Claes  <luk@debian.org>

	* po/sv.po: Updated Swedish translation.

2006-10-02  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #381695.

	* NEWS: Document changed syslog behaviour.
